--- a/css/styless.css
+++ b/css/styless.css
@@ -388,15 +388,13 @@ img {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 .portfolio-item {
-  border: 1px solid #EEEEEE;
+  border: 1px solid #eeeeee;
 }
 
 .portfolio-link {
-
 }
 
 .portfolio-wrapper {
